<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimary"
  android:orientation="vertical">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_gray"
    android:padding="16dp"
    android:text="@string/setting"
    android:textAllCaps="true"
    android:textColor="@color/white"
    android:textSize="16sp" />

  <LinearLayout
    android:id="@+id/home_bt"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:gravity="center_vertical"
    android:padding="16dp">

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_home" />

    <TextView
      style="@style/BaseTextView.TitleText"
      android:layout_marginLeft="5dp"
      android:text="@string/home" />
  </LinearLayout>

  <View style="@style/LineDevice" />

  <LinearLayout
    android:id="@+id/location_bt"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:gravity="center_vertical"
    android:padding="16dp">

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_placeholder" />

    <TextView
      style="@style/BaseTextView.TitleText"
      android:layout_marginLeft="5dp"
      android:text="@string/location" />
  </LinearLayout>

  <View style="@style/LineDevice" />

  <LinearLayout
      android:id="@+id/rada_bt"
      android:layout_width="match_parent"
      android:layout_height="56dp"
      android:gravity="center_vertical"
      android:padding="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_radar" />

    <TextView
        style="@style/BaseTextView.TitleText"
        android:layout_marginLeft="5dp"
        android:text="@string/radar" />
  </LinearLayout>

  <View style="@style/LineDevice" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:gravity="center_vertical"
    android:padding="16dp">

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_tmep" />

    <TextView
      style="@style/BaseTextView.TitleText"
      android:layout_marginLeft="5dp"
      android:text="@string/temp" />

    <RadioGroup
      android:id="@+id/temp_rg"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:gravity="end"
      android:orientation="horizontal">

      <RadioButton
        android:id="@+id/conveyancing_loan_yes_btn"
        style="@style/BaseRadioButton"
        android:checked="true"
        android:background="@drawable/bg_radio_loan_left"
        android:text="@string/c" />

      <RadioButton
        android:id="@+id/conveyancing_loan_no_btn"
        style="@style/BaseRadioButton"
        android:layout_marginStart="-1dp"
        android:background="@drawable/bg_radio_loan_right"
        android:text="@string/f" />
    </RadioGroup>
  </LinearLayout>

  <View style="@style/LineDevice" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:gravity="center_vertical"
    android:padding="16dp">

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_notification" />

    <TextView
      style="@style/BaseTextView.TitleText"
      android:layout_width="0dp"
      android:layout_marginLeft="5dp"
      android:layout_weight="1"
      android:text="@string/notification" />

    <Switch
      android:id="@+id/notification_switch"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  </LinearLayout>

  <View style="@style/LineDevice" />

  <TextView
    style="@style/BaseTextView.TitleText"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:padding="5dp"
    android:text="@string/version"
    android:textSize="12sp" />
</LinearLayout>