<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_night"
    android:orientation="vertical">

    <com.example.bb.weather14.customview.CustomHeaderView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:custom_header_title="@string/location_manager"
        app:custom_hearder_background="@color/opacity_black" />

    <TextView
        android:id="@+id/add_location_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_add"
        android:drawablePadding="@dimen/margin_10dp"
        android:gravity="center_vertical"
        android:padding="@dimen/margin_16dp"
        android:text="@string/add_location"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_16sp" />

    <View
        style="@style/LineDevice"
        android:layout_marginLeft="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/opacity_black"
        android:padding="@dimen/margin_16dp"
        android:text="@string/my_location"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_16sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/location_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>